// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routes : channels DELETE /channels/:id deletes channel by id 1`] = `
Object {
  "channel": Object {
    "created_at": "2020-10-21T06:00:00.000Z",
    "id": 1,
    "name": "general",
    "public": true,
    "updated_at": "2020-10-21T06:00:00.000Z",
    "workspaceId": 1,
  },
  "status": "success",
}
`;

exports[`routes : channels GET /channels returns all channels 1`] = `
Object {
  "channels": Array [
    Object {
      "created_at": "2020-10-21T06:00:00.000Z",
      "id": 1,
      "name": "general",
      "public": true,
      "updated_at": "2020-10-21T06:00:00.000Z",
      "workspaceId": 1,
    },
    Object {
      "created_at": "2020-10-21T06:00:00.000Z",
      "id": 2,
      "name": "random",
      "public": true,
      "updated_at": "2020-10-21T06:00:00.000Z",
      "workspaceId": 1,
    },
    Object {
      "created_at": "2020-10-21T06:00:00.000Z",
      "id": 3,
      "name": "planned",
      "public": true,
      "updated_at": "2020-10-21T06:00:00.000Z",
      "workspaceId": 2,
    },
  ],
  "status": "success",
}
`;

exports[`routes : channels GET /channels/:id returns channel by id 1`] = `
Object {
  "channel": Object {
    "created_at": "2020-10-21T06:00:00.000Z",
    "id": 1,
    "name": "general",
    "public": true,
    "updated_at": "2020-10-21T06:00:00.000Z",
    "workspaceId": 1,
  },
  "status": "success",
}
`;

exports[`routes : channels POST /channels creates new channel 1`] = `
Object {
  "channel": Object {
    "created_at": Any<String>,
    "id": 4,
    "name": "testchannel",
    "public": true,
    "updated_at": Any<String>,
    "workspaceId": 1,
  },
  "status": "success",
}
`;

exports[`routes : channels PUT /channels/:id updates channel by id 1`] = `
Object {
  "channel": Object {
    "created_at": "2020-10-21T06:00:00.000Z",
    "id": 1,
    "name": "updatedname",
    "public": true,
    "updated_at": "2020-10-21T06:00:00.000Z",
    "workspaceId": 1,
  },
  "status": "success",
}
`;
